--- a/todolist/templates/base.html
+++ b/todolist/templates/base.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %}</title>
-    <!-- Bootstrap CSS (cập nhật phiên bản 4.6.2) -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-    <!-- Font Awesome cho biểu tượng -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -20,14 +18,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- CSS tùy chỉnh -->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
   </head>
   <body>
-    <!-- Thanh điều hướng -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="/">
         <i class="fas fa-tasks mr-2"></i>To-Do List
@@ -45,7 +41,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          {% if user.is_authenticated %}
+          {% if current_user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="/home"
               ><i class="fas fa-home mr-1"></i>Home</a
@@ -72,7 +68,6 @@
       </div>
     </nav>
 
-    <!-- Thông báo flash -->
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %}
     <div class="container mt-3">
@@ -91,17 +86,15 @@
           data-dismiss="alert"
           aria-label="Close"
         >
-          <span aria-hidden="true">&times;</span>
+          <span aria-hidden="true">×</span>
         </button>
       </div>
       {% endfor %}
     </div>
     {% endif %} {% endwith %}
 
-    <!-- Nội dung chính -->
     <div class="container mt-4">{% block content %}{% endblock %}</div>
 
-    <!-- Scripts -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -121,5 +114,19 @@
       type="text/javascript"
       src="{{ url_for('static', filename='index.js') }}"
     ></script>
+    <!-- JavaScript để tự động ẩn thông báo sau 3 giây -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const alerts = document.querySelectorAll(".alert");
+        alerts.forEach((alert) => {
+          setTimeout(() => {
+            alert.classList.remove("show");
+            alert.style.transition = "opacity 0.5s";
+            alert.style.opacity = "0";
+            setTimeout(() => alert.remove(), 500); // Xóa hoàn toàn sau khi fade out
+          }, 3000); // 3 giây
+        });
+      });
+    </script>
   </body>
 </html>
