--- a/todolist/templates/base.html
+++ b/todolist/templates/base.html
@@ -51,6 +51,13 @@
               ><i class="fas fa-home mr-1"></i>Home</a
             >
           </li>
+          {% if user.is_admin %}
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/users"
+              ><i class="fas fa-users-cog mr-1"></i>Quản lý User</a
+            >
+          </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="/logout"
               ><i class="fas fa-sign-out-alt mr-1"></i>Đăng xuất</a
@@ -65,6 +72,11 @@
           <li class="nav-item">
             <a class="nav-link" href="/signup"
               ><i class="fas fa-user-plus mr-1"></i>Đăng ký</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/login"
+              ><i class="fas fa-user-shield mr-1"></i>Đăng nhập Admin</a
             >
           </li>
           {% endif %}
