--- a/todolist/templates/admin_users.html
+++ b/todolist/templates/admin_users.html
@@ -30,7 +30,7 @@ block content %}
             <th>Email</th>
             <th>Tên người dùng</th>
             <th>Trạng thái</th>
-            <th>Hành động</th>
+            <th>Hoạt động</th>
           </tr>
         </thead>
         <tbody>
